[gd_scene load_steps=54 format=3 uid="uid://cka8ktym7dsif"]

[ext_resource type="Script" path="res://Scripts/settings_page.gd" id="1_73aqb"]
[ext_resource type="Texture2D" uid="uid://brmxuk7mvlhoq" path="res://Assets/Graphics/Settings Background.png" id="2_oalcd"]
[ext_resource type="FontFile" uid="uid://b73lxxkeo7bsc" path="res://Assets/fonts/cmuntb.ttf" id="4_g2v36"]
[ext_resource type="PackedScene" uid="uid://cjnhkwa8nmm36" path="res://Scenes/Audio Manager Tool.tscn" id="7_6mqhr"]
[ext_resource type="PackedScene" uid="uid://b5op8tn5ax030" path="res://Scenes/Data.tscn" id="8_7i7g3"]

[sub_resource type="Animation" id="Animation_mjnsi"]
length = 0.5

[sub_resource type="Animation" id="Animation_daw8n"]
resource_name = "pop_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1306, 729), Vector2(1170, 653)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(-70, -42), Vector2(-10, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gg355"]
_data = {
"RESET": SubResource("Animation_mjnsi"),
"pop_in": SubResource("Animation_daw8n")
}

[sub_resource type="Animation" id="Animation_pxipv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.00392157, 0.0666667, 0.0980392, 1)]
}

[sub_resource type="Animation" id="Animation_0aqm8"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.004, 0.068, 0.1, 0), Color(0.00392157, 0.0666667, 0.0980392, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sc0f2"]
_data = {
"RESET": SubResource("Animation_pxipv"),
"fade": SubResource("Animation_0aqm8")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6uce"]
bg_color = Color(0.338, 0.4927, 0.52, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gaj08"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qcwbo"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s7xru"]
bg_color = Color(0.337255, 0.494118, 0.521569, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfssx"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_38ewq"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erdkf"]
bg_color = Color(0.198, 0.2881, 0.3, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti3i3"]
bg_color = Color(0.3168, 0.45552, 0.48, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mfbiv"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrokg"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hhtnf"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1gwk"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytwy8"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_luoj0"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7mv6"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fe0lb"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ii32"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb5bp"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhlu2"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcs2"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kptwp"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wos2q"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7y6b8"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4263a"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cvbi"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbbjj"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyac3"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tta3f"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u7fo"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kms37"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1kbi"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5qfq"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7f2fc"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ynxhq"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtkxh"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia5oy"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a281u"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tuaa"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0g0g"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62y4l"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hs1vw"]
bg_color = Color(0.317647, 0.454902, 0.478431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vb85c"]
bg_color = Color(0.196078, 0.286275, 0.301961, 0.392157)

[node name="Settings Page" type="Node2D"]
script = ExtResource("1_73aqb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Graphics" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="Graphics"]
z_index = -5
z_as_relative = false
offset_left = -7.0
offset_top = -4.0
offset_right = 1157.0
offset_bottom = 651.0
texture = ExtResource("2_oalcd")
expand_mode = 1

[node name="Animation Player" type="AnimationPlayer" parent="Graphics/Background"]
libraries = {
"": SubResource("AnimationLibrary_gg355")
}

[node name="Transition" type="ColorRect" parent="Graphics"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -21.0
offset_right = 38.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.0666667, 0.0980392, 1)

[node name="Animation Player" type="AnimationPlayer" parent="Graphics/Transition"]
libraries = {
"": SubResource("AnimationLibrary_sc0f2")
}

[node name="Audio Manager Tool" parent="." instance=ExtResource("7_6mqhr")]

[node name="Buttons" type="Node" parent="."]

[node name="Menu Button" type="Button" parent="Buttons"]
offset_left = 1057.0
offset_top = 40.0
offset_right = 1110.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_c6uce")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gaj08")
theme_override_styles/normal = SubResource("StyleBoxFlat_qcwbo")
text = "Menu"

[node name="Reset Settings" type="Button" parent="Buttons"]
offset_left = 37.0
offset_top = 40.0
offset_right = 155.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_s7xru")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mfssx")
theme_override_styles/normal = SubResource("StyleBoxFlat_38ewq")
text = "Reset Settings"

[node name="-----------------------------------------" type="Node" parent="Buttons"]

[node name="Displayed Stats" type="Label" parent="Buttons"]
offset_left = 99.0
offset_top = 374.0
offset_right = 226.0
offset_bottom = 397.0
theme_override_fonts/font = ExtResource("4_g2v36")
text = "Displayed Stats"
horizontal_alignment = 1

[node name="Score Display Options" type="ItemList" parent="Buttons"]
offset_left = 37.0
offset_top = 408.0
offset_right = 284.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/panel = SubResource("StyleBoxFlat_erdkf")
theme_override_styles/hovered = SubResource("StyleBoxFlat_ti3i3")
select_mode = 1
auto_height = true
item_count = 6
item_0/text = " Total Score"
item_1/text = " Correct Score"
item_2/text = " Missed Score"
item_3/text = " Accuracy"
item_4/text = " Score Streak"
item_5/text = " Hard Characters"

[node name="Mistake Sensitivity" type="Label" parent="Buttons"]
offset_left = 365.0
offset_top = 374.0
offset_right = 525.0
offset_bottom = 397.0
theme_override_fonts/font = ExtResource("4_g2v36")
text = "Mistake Sensitivity"
horizontal_alignment = 1

[node name="Sensitivity Options" type="ItemList" parent="Buttons"]
offset_left = 315.0
offset_top = 408.0
offset_right = 562.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/panel = SubResource("StyleBoxFlat_mfbiv")
theme_override_styles/hovered = SubResource("StyleBoxFlat_xrokg")
auto_height = true
item_count = 4
item_0/text = " Low"
item_1/text = " Medium"
item_2/text = " High"
item_3/text = " Delicate"

[node name="Character Type" type="Label" parent="Buttons"]
offset_left = 927.0
offset_top = 374.0
offset_right = 1046.0
offset_bottom = 397.0
theme_override_fonts/font = ExtResource("4_g2v36")
text = "Character Type"
horizontal_alignment = 1

[node name="Text Options" type="ItemList" parent="Buttons"]
offset_left = 864.0
offset_top = 408.0
offset_right = 1111.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/panel = SubResource("StyleBoxFlat_hhtnf")
theme_override_styles/hovered = SubResource("StyleBoxFlat_e1gwk")
select_mode = 1
auto_height = true
item_count = 4
item_0/text = " Lowercase Characters"
item_1/text = " Uppercase Characters"
item_2/text = " Numbers"
item_3/text = " Symbols"

[node name="Song control" type="ScrollContainer" parent="Buttons"]
offset_left = 661.0
offset_top = 499.0
offset_right = 769.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ytwy8")

[node name="GridContainer" type="GridContainer" parent="Buttons/Song control"]
layout_mode = 2

[node name="Biscuit" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_luoj0")
theme_override_styles/normal = SubResource("StyleBoxFlat_l7mv6")
text = "Biscuit"

[node name="Boba Tea" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_fe0lb")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ii32")
text = "Boba Tea"

[node name="Bread" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_tb5bp")
theme_override_styles/normal = SubResource("StyleBoxFlat_rhlu2")
text = "Bread"

[node name="Butter" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_ofcs2")
theme_override_styles/normal = SubResource("StyleBoxFlat_kptwp")
text = "Butter"

[node name="Chocolate" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_wos2q")
theme_override_styles/normal = SubResource("StyleBoxFlat_7y6b8")
text = "Chocolate"

[node name="Imagine" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_4263a")
theme_override_styles/normal = SubResource("StyleBoxFlat_3cvbi")
text = "Imagine"

[node name="Marshmallow" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_wbbjj")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyac3")
text = "Marshmallow"

[node name="Onion" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_tta3f")
theme_override_styles/normal = SubResource("StyleBoxFlat_7u7fo")
text = "Onion"

[node name="Rose" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_kms37")
theme_override_styles/normal = SubResource("StyleBoxFlat_d1kbi")
text = "Rose"

[node name="Sunset" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_x5qfq")
theme_override_styles/normal = SubResource("StyleBoxFlat_7f2fc")
text = "Sunset"

[node name="Start Up" type="Button" parent="Buttons/Song control/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_ynxhq")
theme_override_styles/normal = SubResource("StyleBoxFlat_xtkxh")
text = "Start Up"

[node name="Sound" type="Label" parent="Buttons"]
offset_left = 656.0
offset_top = 374.0
offset_right = 775.0
offset_bottom = 397.0
theme_override_fonts/font = ExtResource("4_g2v36")
text = "Sound"
horizontal_alignment = 1

[node name="Sound control" type="GridContainer" parent="Buttons"]
offset_left = 589.0
offset_top = 408.0
offset_right = 838.0
offset_bottom = 482.0
columns = 2

[node name="Master Music" type="CheckButton" parent="Buttons/Sound control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_ia5oy")
theme_override_styles/normal = SubResource("StyleBoxFlat_a281u")
text = " Music "

[node name="Master Sound" type="CheckButton" parent="Buttons/Sound control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_7tuaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_i0g0g")
text = " Sound "

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons/Sound control"]
layout_mode = 2

[node name="Volume" type="Label" parent="Buttons/Sound control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/normal = SubResource("StyleBoxFlat_62y4l")
text = "     Volume     "
horizontal_alignment = 1

[node name="volume" type="HSlider" parent="Buttons/Sound control/VBoxContainer"]
layout_mode = 2

[node name="Choose Random" type="Button" parent="Buttons/Sound control"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g2v36")
theme_override_styles/hover = SubResource("StyleBoxFlat_hs1vw")
theme_override_styles/normal = SubResource("StyleBoxFlat_vb85c")
text = " Random Song "

[node name="Data" parent="." instance=ExtResource("8_7i7g3")]

[connection signal="pressed" from="Buttons/Menu Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Buttons/Reset Settings" to="." method="_on_reset_settings_pressed"]
[connection signal="multi_selected" from="Buttons/Score Display Options" to="." method="_on_score_display_multi_selected"]
[connection signal="item_clicked" from="Buttons/Sensitivity Options" to="." method="_on_sensitivity_item_clicked"]
[connection signal="item_clicked" from="Buttons/Text Options" to="." method="_on_text_item_clicked"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Biscuit" to="." method="_on_biscuit_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Boba Tea" to="." method="_on_boba_tea_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Bread" to="." method="_on_bread_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Butter" to="." method="_on_butter_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Chocolate" to="." method="_on_chocolate_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Imagine" to="." method="_on_imagine_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Marshmallow" to="." method="_on_marshmallow_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Onion" to="." method="_on_onion_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Rose" to="." method="_on_rose_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Sunset" to="." method="_on_sunset_pressed"]
[connection signal="pressed" from="Buttons/Song control/GridContainer/Start Up" to="." method="_on_start_up_pressed"]
[connection signal="toggled" from="Buttons/Sound control/Master Music" to="." method="_on_master_music_toggled"]
[connection signal="toggled" from="Buttons/Sound control/Master Sound" to="." method="_on_master_sound_toggled"]
[connection signal="value_changed" from="Buttons/Sound control/VBoxContainer/volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="Buttons/Sound control/Choose Random" to="." method="_on_choose_random_pressed"]
